# ign-gz-cmake-package-alias

./: .gitmodules  README.md  TODO
gz-dummy_dependency/: AUTHORS  CMakeLists.txt  README.md
gz-dummy_dependency/include/ignition/dummy_dependency/: config.hh.in
gz-dummy_dependency/src/: CMakeLists.txt  hello_lib.cc
ign-dummy_dependency/: CMakeLists.txt
ign-dummy_dependency/include/ignition/: CMakeLists.txt
ign-dummy_dependency/include/ignition/dummy_dependency/: hello_lib.h
ign-dummy_dependency/src/: CMakeLists.txt  hello_exec.cpp
ign-dummy_dependent/: CMakeLists.txt  README.md
ign-dummy_dependent/src/: CMakeLists.txt  hello_exec.cpp
